# desafio

./: Makefile  README.md  docker-compose.yml
.github/workflows/: tests.yml
backend/: .env.template  Dockerfile  pyproject.toml
backend/app/api/: main.py
backend/app/api/routes/: __init__.py  defaults.py  users.py
backend/app/core/: config.py  handler.py
backend/app/db/: handler.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: ae7a4e693193_create_main_tables.py
backend/tests/: conftest.py  test_main.py
